compiler/driver/tests/snapshots/diagnostics_snapshots__diag_flush_with_args.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(& out)
---
error[E007]: function `flush` expects 0 arguments, found 1
  --> test.ny:1:20
   |
  1 | fn apply(f: for<'a> fn(&'a i32) -> i32, x: i32) -> i32 {
   |                    ^
   = label: wrong number of arguments
